# minimal-app

./: .gitignore  CHANGELOG.md  IMPLEMENTATION.md  LICENSE  PROJECT_STATUS.md  QUICKSTART.md  README.md  pyproject.toml
examples/: complex_example.py
examples/example1/: app.py  mini_ds.py
examples/example1_ma/: app_ma.py  mini_ds_ma.py
minimal_app/: cli.py  minifier.py  optimizer.py  parser.py
src/minimal_app/: __init__.py  cli.py  codegen.py  lexer.py  minifier.py  optimizer.py  parser.py  semantic.py
tests/: __init__.py  test_cli.py  test_integration.py  test_minifier.py  test_optimizer.py
